# sqlite_zstd_vfs

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: tests.yml
src/: SQLiteNestedVFS.h  SQLiteVFS.h  ThreadPool.h  nested_vfs.cc  zstd_vfs.cc  zstd_vfs.h
test/: TPC-H.py  test.cc  test.py  test_vfstrace.c
